--- a/html/explore.html
+++ b/html/explore.html
@@ -68,7 +68,7 @@
     <div class="scroll-snap-container">
 
         <div class="card-container">
-            <a class="card" href="/html/account.html">
+            <a class="card" href="/html/recipe.html">
                 <div class="creator-bar">
                     <div class="creator-bar__pfp">
                         <img src="/resources/images/OlivierDevelops-pfpicture.jpg" alt="" class="creator-bar__pfp__img">
@@ -101,16 +101,20 @@
                     </div>
                     <div class="recipe-info__stats">
                         <div class="recipe-info__stats__time-price">
-                            <div class="">
+                            <div>
                                 <span class="material-symbols-rounded" id="icon">schedule</span>
                                 <h6 class="h-small">20</h6>
                                 <span class="h-small">mins</span>
                             </div>
                             <div>
-                                <span class="material-symbols-rounded" id="icon">euro</span>
+                                <span class="material-symbols-rounded" id="icon--money">euro</span>
                                 <h6 class="h-small">1/</h6>
                                 <span class="h-small">5</span>
                             </div>
+                        </div>
+                        <div class="recipe-info__stats__rating">
+                            <span class="material-symbols-rounded" id="icon">star</span>
+                            <h6 class="h-small">4,3</h6>
                         </div>
                         <div class="recipe__info__stats__rating"></div>
                     </div>
