javascript form slider attempt

--- a/html/explore.html
+++ b/html/explore.html
@@ -75,11 +75,8 @@
                     </div>
                     <h6 class="creator-bar__username">@olivier.sw</h6>
                 </div>
-                <div class="image-track">
-                    <img src="/resources/images/Pasta-met-walnootsaus-2.webp" alt="" class="image-track__img">
-                    <img src="/resources/images/Pasta-met-walnootsaus-2.webp" alt="" class="image-track__img">
-                    <img src="/resources/images/Pasta-met-walnootsaus-2.webp" alt="" class="image-track__img">
-                    <img src="/resources/images/Pasta-met-walnootsaus-2.webp" alt="" class="image-track__img">
+                <div class="thumbnail-image">
+                    <img src="/resources/images/Pasta-met-walnootsaus-2.webp" alt="" class="thumbnail-image__img">
                 </div>
                 <div class="recipe-info">
                     <h4 class="recipe-info__name">
