--- a/html/post.html
+++ b/html/post.html
@@ -35,20 +35,24 @@
 
         <form action="" class="form">
 
-            <div class="form-page form-page--1">
-                <input type="name" name="" id="" placeholder="">
+            <div class="form-page form-page--1 current-slide">
+                <input type="name" name="" id="" placeholder="1">
             </div>
 
             <div class="form-page form-page--2">
-                <input type="name" name="" id="">
+                <input type="name" name="" id="" placeholder="2">
             </div>
 
-            <div class="form-page form-page--1">
-                <input type="name" name="" id="">
+            <div class="form-page form-page--3">
+                <input type="name" name="" id="" placeholder="3">
             </div>
 
-            <div class="form-page form-page--2">
-                <input type="name" name="" id="">
+            <div class="form-page form-page--4">
+                <input type="name" name="" id="" placeholder="4">
+            </div>
+
+            <div class="form-page form-page--5">
+                <input type="name" name="" id="" placeholder="4">
             </div>
 
         </form>
@@ -56,11 +60,14 @@
     </section>
 
     <div class="progress-bar-section">
-        <span class="material-symbols-rounded arrow-right">arrow_back</span>
+        <span class="material-symbols-rounded arrow-left">arrow_back</span>
         <div class="progress-bar"></div>
         <div class="test"></div>
-        <span class="material-symbols-rounded arrow-left">arrow_forward</span>
+        <span class="material-symbols-rounded arrow-right">arrow_forward</span>
     </div>
+
+
+<script src="/js/form.js"></script>
 
 </body>
 
