--- a/html/recipe.html
+++ b/html/recipe.html
@@ -30,7 +30,7 @@
             </button>
         </a>
     </nav>
-
+<!-- 
     <section class="ingredients">
         <button class="close-btn">
             <span class="material-symbols-rounded">close</span>
@@ -75,7 +75,7 @@
                 </li>
             </ul>
         </div>
-    </section>
+    </section> -->
 
     <section class="recipe">
 
